kubernetes/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-redis
  template:
    metadata:
      labels:
        app: flask-redis
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
        - name: flask
          image: ghcr.io/badri/flask-redis-cd/flask-redis:ac27ace3481b1b25b7604b480b6185ff42151164
          ports:
            - containerPort: 8080
      volumes:
      - name: redis-check-script
        configMap:
          name: redis-check
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: flask-redis
spec:
  type: ClusterIP
  selector:
    app: flask-redis
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-redis
spec:
  tls:
  - hosts:
    - flask-redis.example.com
    secretName: flask-redis-tls
  ingressClassName: nginx
  rules:
  - host: flask-redis.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-redis
            port:
              number: 8080
---
